--- a/index.html
+++ b/index.html
@@ -5,19 +5,29 @@
     <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
     <script src="bower_components/moment/min/moment.min.js"></script>
-    <title>TitleOfSite</title>
+    <title>Pandemic</title>
   </head>
   <body>
     <div class="container">
-        <h1>TitleOfSite</h1>
-        <form id="name-of-form">
-          <div class="form-group">
-            <label for="field-id">Enter a number:</label>
-            <input id="field-id" type="number">
-            <button class="btn-success" type="submit">Submit</button>
-          </div>
-        </form>
-        <ul id="solution"></ul>
+
+      <div class="opening-screen">
+        <h1>Pandemic</h1>
+        <p>The goal of game is to eliminate all infections from the board.</p>
+        <p>New infections will hit random cities every 4 seconds.</p>
+        <p>Click on a city to remove one infection.</p>
+        <p>Below the board are multiple choice questions about Javascript. Every 3 answers you get correct will give you the ability to 'quarantine' a city. This allows you to prevent any infections from hitting that city.</p>
+        <p>Once you answer 6 questions correctly, you will remove 2 infections per click.</p>
+
+        <button type="button" id="start">Start Game</button>
       </div>
+
+      <div class="pandemic-board">
+        <div class="city">
+          <p class="city-name"></p>
+          <div class="infection-blocks">
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
