--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
     <script src="bower_components/moment/min/moment.min.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
+
     <title>Pandemic</title>
   </head>
   <body>
@@ -22,9 +24,87 @@
       </div>
 
       <div class="pandemic-board">
-        <div class="city">
-          <p class="city-name"></p>
-          <div class="infection-blocks">
+        <div class="city Seattle" value="Seattle">
+          <p class="city-name">Seattle</p>
+          <div class="outer">
+          </div>
+        </div>
+
+        <div class="city Tacoma" value="Tacoma">
+          <p class="city-name">Tacoma</p>
+          <div class="outer">
+          </div>
+        </div>
+
+        <div class="city Vancouver" value="Vancouver">
+          <p class="city-name">Vancouver</p>
+          <div class="outer">
+          </div>
+        </div>
+
+        <div class="city Bellingham" value="Bellingham">
+          <p class="city-name">Bellingham</p>
+          <div class="outer">
+          </div>
+        </div>
+
+        <div class="city Bellevue" value="Bellevue">
+          <p class="city-name">Bellevue</p>
+          <div class="outer">
+          </div>
+        </div>
+
+        <div class="city Everett" value="Everett">
+          <p class="city-name">Everett</p>
+          <div class="outer">
+          </div>
+        </div>
+
+        <div class="city Sequim" value="Sequim">
+          <p class="city-name">Sequim</p>
+          <div class="outer">
+          </div>
+        </div>
+
+        <div class="city Spokane" value="Spokane">
+          <p class="city-name">Spokane</p>
+          <div class="outer">
+          </div>
+        </div>
+
+        <div class="city Forks" value="Forks">
+          <p class="city-name">Forks</p>
+          <div class="outer">
+          </div>
+        </div>
+
+        <div class="city Yakima" value="Yakima">
+          <p class="city-name">Yakima</p>
+          <div class="outer">
+          </div>
+        </div>
+
+        <div class="city Kennewick" value="Kennewick">
+          <p class="city-name">Kennewick</p>
+          <div class="outer">
+          </div>
+        </div>
+
+        <div class="city Leavenworth" value="Leavenworth">
+          <p class="city-name">Leavenworth</p>
+          <div class="outer">
+          </div>
+        </div>
+
+        <div class="city LongBeach" value="LongBeach">
+          <p class="city-name">LongBeach</p>
+          <div class="outer">
+          </div>
+        </div>
+
+        <div class="city Bremerton" value="Bremerton">
+          <p class="city-name">Bremerton</p>
+          <div class="outer">
           </div>
         </div>
       </div>
